resources/tests/valid_syntax/var_read.ct
//`'0'
fn main()->i64
{
  var read = 10;
  {
    var hel = 10;
    read + hel;
  }
  return read - 10;
}