resources/tests/invalid_syntax/fn_call_var.ct
//Error: 'hela' is not a function!
//1
var hela = 10i64;
fn hello(mut i64 a)->i32;

fn main()->i64
{
  hela(); //<- error
  hello(10i64); //<- no error
}